# soul_knight

./: .gitignore  README.md  example.py  get_data.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
SKD/: __init__.py  core.py  get_official_data.py
soul_knight/: __init__.py
soul_knight_data_processing/: __init__.py  core.py
