[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "soul_knight_data_processing"
version = "0.0.5"
authors = [
  { name="Roren Natsumi", email="RorenNatsumi@outlook.com"},
]
description = "A package for encode or decode soul_knight data files."
readme = "README.md"
license = { file="LICENSE" }
dependencies = [
        "pycryptodome",
        "requests",
        "wget"
    ]

[project.urls]
"Homepage" = "https://github.com/Suto-Commune/soul_knight/"
